--- a/views/grupo/vista-grupo-actividades.hbs
+++ b/views/grupo/vista-grupo-actividades.hbs
@@ -77,6 +77,25 @@
                                         <input type="number" min="1" max="100" class="form-control" name="valor"
                                                value="{{actividad.dataValues.valor}}">
                                     </div>
+                                    <div class="col">
+                                        <div class="col">
+                                            <label for="tipoBox" class="form-label">Categoría</label>
+                                            <select class="custom-select" name="tipoBox" disabled id="tipoBox">
+                                                {{#select tipoActividad}}
+                                                    <option value="Investigación">Investigación</option>
+                                                    <option value="Presentación">Presentación</option>
+                                                    <option value="Proyecto">Proyecto</option>
+                                                    <option value="Reporte / Práctica">Reporte / Práctica</option>
+                                                    <option value="Resumen">Resumen</option>
+                                                    <option value="Mapa Conceptual">Mapa Conceptual</option>
+                                                    <option value="Cuadro Sinoptico">Cuadro Sinoptico</option>
+                                                    <option value="Mapa Mental">Mapa Mental</option>
+                                                    <option value="Ejercicios">Ejercicios</option>
+                                                    <option value="Otros">Otros</option>
+                                                {{/select}}
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="row m-0 p-0">
                                     <label for="descripcion">Descripción</label>
@@ -84,36 +103,39 @@
                                               name="descripcion">{{actividad.dataValues.descripcion}}</textarea>
                                 </div>
                             </div>
-                            <div class="card-footer">
-                                <div class="align-content-md-end">
-                                    <a class="btn btn-outline-primary" type="button" name="calificar" id="calificar"
-                                       data-toggle="modal" data-target="#calificarModal">Calificar</a>
-                                    <a class="btn btn-primary" type="submit" name="guardar" id="guardar" data-toggle="modal" data-target="#editarActividadModal">Guardar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Modal para verificar la edición-->
-                        <div class="modal fade" id="editarActividadModal" tabindex="-1"
-                             aria-labelledby="editarActividadModal" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="editarActividadModalLabel">Editar actividad</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        ¿Está seguro que desea editar la actividad?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <a class="btn btn-secondary" data-dismiss="modal">No</a>
-                                        <button type="submit" class="btn btn-primary">Sí</button>
+                            <!-- Modal para verificar la edición-->
+                            <div class="modal fade" id="editarActividadModal" tabindex="-1"
+                                 aria-labelledby="editarActividadModal" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="editarActividadModalLabel">Editar actividad</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            ¿Está seguro que desea editar la actividad?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <a class="btn btn-secondary" data-dismiss="modal">No</a>
+                                            <button type="submit" class="btn btn-primary">Sí</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
+                            <!--Cierre Form -->
+                        </form>
+                        <div class="card-footer">
+                            <div class="align-content-md-end">
+                                <a class="btn btn-outline-primary" type="button" name="calificar" id="calificar"
+                                   data-toggle="modal" data-target="#calificarModal">Calificar</a>
+                                <button class="btn btn-primary" type="submit" name="guardar" id="guardar" data-toggle="modal" disabled
+                                   data-target="#editarActividadModal">Guardar</button>
+                            </div>
                         </div>
-                    </form>
+                    </div>
                 {{else}}
                     <h2>Seleccione una actividad para mostrar más información.</h2>
                 {{/if}}
