--- a/views/grupo/vista-grupo-alumnos.hbs
+++ b/views/grupo/vista-grupo-alumnos.hbs
@@ -4,20 +4,20 @@
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}">Inicio</a>
+            <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}"  title="Muestra el progreso general del grupo.">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill"></i> Alumnos</a>
+            <a class="nav-link active" title="Muestra la lista de alumnos que contiene el grupo." href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill" ></i> Alumnos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"></i> Temas</a>
+            <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo." href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"  ></i> Temas</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-bookmark-check-fill"></i>
+            <a class="nav-link " title="Muestra la lista de actividades por grupo o por tema." href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-bookmark-check-fill"></i>
                 Actividades</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"></i>
+            <a class="nav-link " title="Muestra las calificaciones almacenadas." href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"  ></i>
                 Calificaciones</a>
         </li>
     </ul>
@@ -133,30 +133,31 @@
                             </button>
                         </div>
                     </div>
-
-
+                    <form action="/alumnos/eliminar-alumno/{{idgrupo}}/{{alumno.dataValues.id}}?_method=DELETE" method="POST">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <div class="modal fade" id="eliminarAlumno" tabindex="-1" aria-labelledby="eliminarAlumno" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="eliminarAlumnoLabel">Eliminar Alumno</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ¿Está seguro que desea eliminar el alumno? Se eliminara permanentemente.
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a class="btn btn-secondary" data-dismiss="modal">Cancelar</a>
+                                        <button type=submit" class="btn btn-danger">Eliminar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 {{else}}
                     <h2>Seleccione un alumno para mostrar más información.</h2>
                 {{/if}}
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="eliminarAlumno" tabindex="-1" aria-labelledby="eliminarAlumno" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="eliminarAlumnoLabel">Eliminar Alumno</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ¿Está seguro que desea eliminar el alumno? Se eliminara permanentemente.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger">Eliminar</button>
-                </div>
             </div>
         </div>
     </div>
