--- a/views/grupo/vista-grupo-calificaciones.hbs
+++ b/views/grupo/vista-grupo-calificaciones.hbs
@@ -2,20 +2,20 @@
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}">Inicio</a>
+            <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}"  title="Muestra el progreso general del grupo.">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill"></i> Alumnos</a>
+            <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo." href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill" ></i> Alumnos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"></i> Temas</a>
+            <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo." href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"  ></i> Temas</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-bookmark-check-fill"></i>
+            <a class="nav-link " title="Muestra la lista de actividades por grupo o por tema." href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-bookmark-check-fill"></i>
                 Actividades</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"></i>
+            <a class="nav-link active" title="Muestra las calificaciones almacenadas." href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"  ></i>
                 Calificaciones</a>
         </li>
     </ul>
