--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -3,21 +3,21 @@
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/grupo/inicio/{{grupo.dataValues.id}}"> Inicio</a>
+            <a class="nav-link active" aria-current="page" href="/grupo-inicio/{{grupo.dataValues.id}}"  title="Muestra el progreso general del grupo.">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/grupo/alumnos/{{grupo.dataValues.id}}"><i class="bi bi-people-fill"></i> Alumnos</a>
+            <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo." href="/grupo/alumnos/{{grupo.dataValues.id}}"><i class="bi bi-people-fill" ></i> Alumnos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/temas/{{grupo.dataValues.id}}"><i class="bi bi-book-fill"></i> Temas</a>
+            <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo." href="/grupo/temas/{{grupo.dataValues.id}}"><i class="bi bi-book-fill"  ></i> Temas</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/actividades/{{grupo.dataValues.id}}"><i
-                    class="bi bi-bookmark-check-fill"></i> Actividades</a>
+            <a class="nav-link " title="Muestra la lista de actividades por grupo o por tema." href="/grupo/actividades/{{grupo.dataValues.id}}"><i class="bi bi-bookmark-check-fill"></i>
+                Actividades</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/grupo/calificaciones/{{grupo.dataValues.id}}"><i
-                    class="bi bi-file-spreadsheet-fill"></i> Calificaciones</a>
+            <a class="nav-link" title="Muestra las calificaciones almacenadas." href="/grupo/calificaciones/{{grupo.dataValues.id}}"><i class="bi bi-file-spreadsheet-fill"  ></i>
+                Calificaciones</a>
         </li>
     </ul>
     <!-- Titulo de la vista -->
