Agregados los mensajes contextuales para mejorar la experiencia de usuario.

--- a/views/grupo/vista-grupo-actividades.hbs
+++ b/views/grupo/vista-grupo-actividades.hbs
@@ -65,14 +65,14 @@
                                     <h4>Datos de la actividad</h4>
                                 </div>
                                 <div class="col-11" align="right">
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="switchEditar">
+                                    <div class="custom-control custom-switch" title="Habilitar edición de la actividad.">
+                                        <input type="checkbox" class="custom-control-input" id="switchEditar" >
                                         <label class="custom-control-label" for="switchEditar">Editar</label>
                                     </div>
                                 </div>
                                 <div class="col" align="right">
                                     <a class="bi bi-trash-fill" data-toggle="modal"
-                                       data-target="#eliminarActividadModal"></a>
+                                       data-target="#eliminarActividadModal" title="Eliminar actividad del tema/unidad."></a>
                                 </div>
                             </div>
 
