--- a/views/grupo/vista-grupo-alumnos.hbs
+++ b/views/grupo/vista-grupo-alumnos.hbs
@@ -54,14 +54,14 @@
                                     <h4>Datos del Alumno</h4>
                                 </div>
                                 <div class="col-11" align="right">
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="switchEditar">
+                                    <div class="custom-control custom-switch" title="Habilitar edición del alumno.">
+                                        <input type="checkbox" class="custom-control-input" id="switchEditar" >
                                         <label class="custom-control-label" for="switchEditar">Editar</label>
                                     </div>
                                 </div>
                                 <div class="col" align="right">
                                     <a class="bi bi-trash-fill" href="#" data-toggle="modal"
-                                       data-target="#eliminarAlumno"></a>
+                                       data-target="#eliminarAlumno" title="Desasociar alumno del grupo."></a>
                                 </div>
                             </div>
                         </div>
