Agregado mensajes contextuales para la mejora de la experiencia de usuario.

--- a/views/grupo/vista-grupo-temas.hbs
+++ b/views/grupo/vista-grupo-temas.hbs
@@ -35,9 +35,9 @@
                 <div class="card" style="height:14rem;">
                     <div class="card-header d-flex flex-row-reverse">
                         <a class="bi bi-trash-fill " align="right" href="#" data-toggle="modal"
-                           data-target="#eliminarTemaModal"></a>
+                           data-target="#eliminarTemaModal" title="Eliminar el tema permanentemente."></a>
                         <a class="bi bi-pencil-square " align="right" href="#" data-toggle="modal"
-                           data-target="#editarTemaModal"></a>
+                           data-target="#editarTemaModal" title="Editar el tema."></a>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">{{dataValues.numerotema}}. {{dataValues.nombre}}</h5>
