Agregado soporte inicial para la selección de archivos

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,8 +17,7 @@
 
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand bi bi-house-fill"  href="/">
-                </a>
+                <a class="bi bi-house-fill"  href="/" title="Inicio"></a>
             </div>
         </nav>
 
