--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,6 +14,7 @@
         <script src="/js/bootstrap.js"></script>
         <script src="/js/bootstrap.bundle.js"></script>
         <script src="/js/popover-helper.js"></script>
+        <script src="/js/bs-custom-file-input.js"></script>
 
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
