commit de respaldo

--- a/views/grupo/vista-grupo-actividades.hbs
+++ b/views/grupo/vista-grupo-actividades.hbs
@@ -1,3 +1,4 @@
+<title>{{asignatura}} {{clave}} - Actividades - Seguimiento de Estudiantes</title>
 <div class="container-fluid p-2 bg-light">
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
