--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -3,7 +3,7 @@
 {{else}}
     <title>Agregar alumnos a grupo - Seguimiento de Estudiantes</title>
 {{/ifeq}}
-<body>
+<body onload="cargarDatos()">
 <div class="container bg-light m-100">
     <!-- Sección de declaración de errores. -->
     {{#each errors}}
@@ -31,11 +31,11 @@
         </div>
 
         <div class="col input-group">
-            <input class="form-control" type="text" placeholder="Nombre(s)" id="NombreBox" name="NombreBox"
+            <input class="form-control" type="text" placeholder="Apellidos y Nombre(s)" id="NombreBox" name="NombreBox"
                    aria-label="Nombre(s)">
         </div>
     </div>
-    <div class="row-cols-1  d-flex flex-row-reverse ">
+    <div class="row-cols-1  d-flex flex-row-reverse">
         <div class="col-auto d-flex flex-row-reverse p-3">
             <div id="toolbar">
                 <a id="remove" class="btn btn-danger">Eliminar</a>
@@ -48,7 +48,7 @@
     {{#ifeq adds '0'}}
         <form class="needs-validation" action="/alumno/wizard-agregar-alumnos-manual/{{idgrupo}}/0" method="POST"
               novalidate>
-            <input type="hidden" id="valorTabla" name="valorTabla">
+            <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
             <div class="row-cols-1 ">
                 <div class="col-auto">
                     <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
@@ -87,7 +87,6 @@
                             <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
                             <th data-field="clave" data-sorteable="false">No. Control</th>
                             <th data-field="nombre" data-sorteable="true">Nombre</th>
-                            <th data-field="apellidos" data-sorteable="true">Apellidos</th>
                         </tr>
                         </thead>
                         <tbody>
