Agregado soporte inicial para la selección de archivos.

--- a/views/grupo/vista-grupo-alumnos.hbs
+++ b/views/grupo/vista-grupo-alumnos.hbs
@@ -75,14 +75,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="row">
-                                            <label for="apellidos"
-                                                   class="form-label col-form-label-sm">Apellidos</label>
-                                            <input type="text" class="form-control form-control-sm " disabled
-                                                   name="apellidos" id="apellidos"
-                                                   value="{{alumno.dataValues.apellidos}}">
-                                        </div>
-                                        <div class="row">
-                                            <label for="nombre" class="form-label col-form-label-sm">Nombre</label>
+                                            <label for="nombre" class="form-label col-form-label-sm">Apellidos y Nombre(s)</label>
                                             <input type="text" class="form-control form-control-sm" disabled id="nombre"
                                                    name="nombre"
                                                    id="nombre" value="{{alumno.dataValues.nombre}}">
